<resources>
    <string name="app_name">karaoke</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nava_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="list">List</string>
    <string name="like_list">Favorite List</string>
    <string name="sing_list">Sing Online List</string>hát
    <string name="note_null">Can not found</string>
    <string name="add_list">Saved to favorites list</string>
    <string name="remove_list">Removed from the favorites list</string>
    <string name="language">Language</string>
    <string name="share_link">Share/Feedback</string>
    <string name="search_map">Search around</string>
    <string name="account">Account</string>
    <string name="title_login">LOGIN</string>
    <string name="title_to">TO</string>
    <string name="title_youraccount">YOUR ACCOUNT</string>
    <string name="login_account">User Name</string>
    <string name="login_password">User Password</string>
    <string name="login_register">REGISTER</string>
    <string name="login_signin">SIGN IN</string>
    <string name="title_activity_info_user">InfoUserActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="title_activity_maps">Map</string>

</resources>
